@@ -73,7 +73,7 @@ final class PriorityCalculator {
     static EncodedValue getEV(EncodedValueLookup lookup, String name, String key) {
         if (!lookup.hasEncodedValue(key))
             throw new IllegalArgumentException("Cannot find encoded value '" + key + "' specified in '" + name
-                    + "'. Available: " + names(lookup.getAllShared()));
+                    + "'. Available: " + names(lookup.getEncodedValues()));
         return lookup.getEncodedValue(key, EncodedValue.class);
     }
 
